Change Log for XavaProjects
===========================

- Eclipse configuration files removed from GitHub code, still works with Eclipse importing as Maven project.

XavaProjects 2025.05 (2025-5-5)
-------------------------------
- OpenXava upgraded to OpenXava 7.5.1.

XavaProjects 2025.03 (2025-3-26)
--------------------------------
- OpenXava upgraded to OpenXava 7.5.

XavaProjects 2025.01 (2025-1-13)
--------------------------------
- OpenXava upgraded to OpenXava 7.4.5.

XavaProjects 2024.12 (2024-12-10)
---------------------------------
- Saving an issue from MyCalendar module returns to the calendar view (the list).
- Added the 'Planned for' date to the issues list in plan.  
- MySQL JDBC driver upgraded to 9.1.
- OpenXava upgraded to OpenXava 7.4.4.
- Fix: Security vulnerability from dependencies.
- Fix: If no IssueStatus or IssueType by default for calendar an error is shown on create issue in calendar. 

XavaProjects 2024.11 (2024-11-19)
---------------------------------
- Email reminder to worker for his planned issues for the day, using Quartz.
- OpenXava upgraded to OpenXava 7.4.3.

XavaProjects 2024.10 (2024-10-14)
---------------------------------
- New MyCalendar module.
- Resize columns for lists enabled.
- Default columns for list mode of Issue refined.
- Property plannedFor added to Issue.
- IssueType and IssueStatus has a useAsDefaultValueForMyCalendar property.
- Properties startDate and endDate added to Period.
- Properties userName and email added to Worker.
- OpenXava upgraded to OpenXava 7.4.1.

XavaProjects 2024.09 (2024-9-17)
--------------------------------
- OpenXava upgraded to OpenXava 7.4.

XavaProjects 2024.06 (2024-6-18)
--------------------------------
- OpenXava upgraded to OpenXava 7.3.3.
- Fix: DOWNLOAD FROM GITHUB button in Welcome page does not work.

XavaProjects 2024.05bis (2024-5-28)
-----------------------------------
- OpenXava upgraded to OpenXava 7.3.2.

XavaProjects 2024.05 (2024-5-7)
-------------------------------