@@ -17,26 +17,17 @@ public class PlannedIssueReminderJob implements Job {
 	private static final Log log = LogFactory.getLog(PlannedIssueReminderJob.class);
     
     public void execute(JobExecutionContext context) {
-		System.out.println("PlannedIssueReminderJob.execute() Entering"); // tmr
     	String issueId = "Unknow";
     	String workerEmail = "Unknow";
     	try {
     		issueId = context.getJobDetail().getJobDataMap().getString("issue.id");
-			System.out.println("PlannedIssueReminderJob.execute() issueId=" + issueId); // tmr
 			String schema = context.getJobDetail().getJobDataMap().getString("schema");
-			System.out.println("PlannedIssueReminderJob.execute() schema=" + schema); // tmr
 			if (schema != null) {
-				System.out.println("PlannedIssueReminderJob.execute() Setting schema=" + schema); // tmr
 				XPersistence.setDefaultSchema(schema);
 			}
-			else {
-				System.out.println("PlannedIssueReminderJob.execute() No schema found"); // tmr
-			}
     		Issue issue = Issue.findById(issueId);
-			System.out.println("PlannedIssueReminderJob.execute() issue=" + issue);
-			// TMR ME QUEDÉ POR AQUÍ: COMPROBAR QUE LO LOGS FUNCIONAN BIEN
     		if (issue == null) {
-    			log.error(XavaResources.getString("planned_issue_reminder_no_field", issueId, "issue"));
+    			log.error(XavaResources.getString("planned_issue_reminder_issue_not_found", issueId));
     			return;
     		}
     		Plan plan = issue.getAssignedTo();
@@ -65,7 +56,6 @@ public class PlannedIssueReminderJob implements Job {
     		String subject = XavaResources.getString("planned_issue_reminder_subject", issue.getTitle(), formattedDate);
     		String content = XavaResources.getString("planned_issue_reminder_content", issue.getTitle(), issue.getDescription(), formattedDate);
     		
-			System.out.println("PlannedIssueReminderJob.execute() Sending email to " + workerEmail); // tmr
     		Emails.send(workerEmail, subject, content);
     	}
     	catch (Exception ex) {
