@@ -28,6 +28,7 @@ no_plan_for_user_date=There is no plan for {2} on the date {1}. Create one and s
 planned_issue_reminder_subject=Reminder: {0} @ {1}
 planned_issue_reminder_content=<h2>Reminder</h2><p>There is a planned issue for today.</p><h4>Title</h4><p>{0}</p><h4>Description</h4>{1}<h4>Date</h4><p>{2}</p>
 planned_issue_reminder_error=Planned issue reminder {0} for worker {1} could not be sent
+planned_issue_reminder_issue_not_found=Could not send reminder for issue {0}: issue not found
 planned_issue_reminder_no_field=Could not send reminder for issue {0}: missing or invalid field {1}
 plan_issue_error=Impossible to plan reminder for issue {0}
 unplan_issue_error=Impossible to unplan reminder for issue {0}
