@@ -28,6 +28,7 @@ no_plan_for_user_date=No hay plan para {2} en la fecha {1}. Crea uno y ponlo en 
 planned_issue_reminder_subject=Recordatorio: {0} @ {1}
 planned_issue_reminder_content=<h2>Recordatorio</h2><p>Hay una incidencia planeada para hoy.</p><h4>Título</h4><p>{0}</p><h4>Descripción</h4>{1}<h4>Fecha</h4><p>{2}</p>
 planned_issue_reminder_error=Recordatorio para incidencia planeada {0} del trabajador {1} no se ha podido enviar
+planned_issue_reminder_issue_not_found=No se pudo enviar recordatorio para incidencia {0}: incidencia no encontrada
 planned_issue_reminder_no_field=No se pudo enviar recordatorio para incidencia {0}: falta o es inválido el campo {1}
 plan_issue_error=Imposible planificar recordatorio para incidencia {0}
 unplan_issue_error=Imposible eliminar planificación de recordatorio para incidencia {0}
