@@ -29,7 +29,7 @@
 	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
 	      username="root" password="openxava" 
 	      driverClassName="com.mysql.cj.jdbc.Driver"
-	      url="jdbc:mysql://192.168.0.17:3306?serverTimezone=GMT%2B2"/>	 <!-- tmr Poner localhost -->     
+	      url="jdbc:mysql://localhost:3306?serverTimezone=GMT%2B2"/>
 	
 	<!-- PostgreSQL 
 	<Resource name="jdbc/xavaprojectsDS" auth="Container" type="javax.sql.DataSource"
